RESOLVED FIXED71075
Exception subtypes have incorrect namespace indentation
https://bugs.webkit.org/show_bug.cgi?id=71075
Summary Exception subtypes have incorrect namespace indentation
Adam Barth
Reported 2011-10-27 16:21:02 PDT
Exception subtypes have incorrect namespace indentation
Attachments
Patch (9.20 KB, patch)
2011-10-27 16:21 PDT, Adam Barth
eric: review+
Adam Barth
Comment 1 2011-10-27 16:21:53 PDT
Eric Seidel (no email)
Comment 2 2011-10-27 16:26:06 PDT
Comment on attachment 112776 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=112776&action=review > Source/WebCore/dom/RangeException.h:3 > + a (C) 2000 Gunnstein Lye (gunnstein@netcom.no) a!
Adam Barth
Comment 3 2011-10-27 16:58:40 PDT
Note You need to log in before you can comment on or make changes to this bug.