Source/WebCore/dom/RangeException.h
@@ -29,27 +29,27 @@
 
 namespace WebCore {
 
-    class RangeException : public ExceptionBase {
-    public:
-        static PassRefPtr<RangeException> create(const ExceptionCodeDescription& description)
-        {
-            return adoptRef(new RangeException(description));
-        }
+class RangeException : public ExceptionBase {
+public:
+    static PassRefPtr<RangeException> create(const ExceptionCodeDescription& description)
+    {
+        return adoptRef(new RangeException(description));
+    }
 
-        static const int RangeExceptionOffset = 200;
-        static const int RangeExceptionMax = 299;
+    static const int RangeExceptionOffset = 200;
+    static const int RangeExceptionMax = 299;
 
-        enum RangeExceptionCode {
-            BAD_BOUNDARYPOINTS_ERR = RangeExceptionOffset + 1,
-            INVALID_NODE_TYPE_ERR
-        };
-
-    private:
-        RangeException(const ExceptionCodeDescription& description)
-            : ExceptionBase(description)
-        {
-        }
+    enum RangeExceptionCode {
+        BAD_BOUNDARYPOINTS_ERR = RangeExceptionOffset + 1,
+        INVALID_NODE_TYPE_ERR
     };
+
+private:
+    RangeException(const ExceptionCodeDescription& description)
+        : ExceptionBase(description)
+    {
+    }
+};
 
 } // namespace WebCore
 
