Source/WebCore/xml/XMLHttpRequestException.h
@@ -33,27 +33,27 @@
 
 namespace WebCore {
 
-    class XMLHttpRequestException : public ExceptionBase {
-    public:
-        static PassRefPtr<XMLHttpRequestException> create(const ExceptionCodeDescription& description)
-        {
-            return adoptRef(new XMLHttpRequestException(description));
-        }
+class XMLHttpRequestException : public ExceptionBase {
+public:
+    static PassRefPtr<XMLHttpRequestException> create(const ExceptionCodeDescription& description)
+    {
+        return adoptRef(new XMLHttpRequestException(description));
+    }
 
-        static const int XMLHttpRequestExceptionOffset = 500;
-        static const int XMLHttpRequestExceptionMax = 699;
+    static const int XMLHttpRequestExceptionOffset = 500;
+    static const int XMLHttpRequestExceptionMax = 699;
 
-        enum XMLHttpRequestExceptionCode {
-            NETWORK_ERR = XMLHttpRequestExceptionOffset + 101,
-            ABORT_ERR
-        };
-
-    private:
-        XMLHttpRequestException(const ExceptionCodeDescription& description)
-            : ExceptionBase(description)
-        {
-        }
+    enum XMLHttpRequestExceptionCode {
+        NETWORK_ERR = XMLHttpRequestExceptionOffset + 101,
+        ABORT_ERR
     };
+
+private:
+    XMLHttpRequestException(const ExceptionCodeDescription& description)
+        : ExceptionBase(description)
+    {
+    }
+};
 
 } // namespace WebCore
 
