Source/WebCore/xml/XPathException.h
@@ -33,27 +33,27 @@
 
 namespace WebCore {
 
-    class XPathException : public ExceptionBase {
-    public:
-        static PassRefPtr<XPathException> create(const ExceptionCodeDescription& description)
-        {
-            return adoptRef(new XPathException(description));
-        }
+class XPathException : public ExceptionBase {
+public:
+    static PassRefPtr<XPathException> create(const ExceptionCodeDescription& description)
+    {
+        return adoptRef(new XPathException(description));
+    }
 
-        static const int XPathExceptionOffset = 400;
-        static const int XPathExceptionMax = 499;
+    static const int XPathExceptionOffset = 400;
+    static const int XPathExceptionMax = 499;
 
-        enum XPathExceptionCode {
-            INVALID_EXPRESSION_ERR = XPathExceptionOffset + 51,
-            TYPE_ERR
-        };
-
-    private:
-        XPathException(const ExceptionCodeDescription& description)
-            : ExceptionBase(description)
-        {
-        }
+    enum XPathExceptionCode {
+        INVALID_EXPRESSION_ERR = XPathExceptionOffset + 51,
+        TYPE_ERR
     };
+
+private:
+    XPathException(const ExceptionCodeDescription& description)
+        : ExceptionBase(description)
+    {
+    }
+};
 
 } // namespace WebCore
 
